Compilers/a2/Grammar.txt
 * STMTS    -> STMTS STMT | STMT
 * STMT     -> ASSIGN ;
 * STMT     -> LISTEXPR ;
 * ASSIGN   -> set VAR LISTEXPR
 * LISTEXPR -> CONCAT | CLIST
 * CLIST    -> cdr LISTEXPR | ( ITEMS ) | ( ) | VAR
 * VAR      -> char
 * CONCAT   -> LISTEXPR + CLIST
 * ITEMS    -> ITEMS ITEM | ITEM
 * ITEM     -> LISTEXPR
 * ITEM     -> str | int | real
 * ITEM     -> car LISTEXPR
